@@ -1,60 +1,64 @@
 package com.erp.util;
 
-import java.security.spec.KeySpec;
-import java.util.Base64;
+import java.io.UnsupportedEncodingException;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+import java.util.Arrays;
 
+import javax.xml.bind.DatatypeConverter;
 import javax.crypto.Cipher;
-import javax.crypto.SecretKey;
-import javax.crypto.SecretKeyFactory;
-import javax.crypto.spec.IvParameterSpec;
-import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.spec.SecretKeySpec;
 
 public class AES {
-	private static String secretKey = "deliveryApp";
-	private static String salt = "hieutv";
-	 
-	public static String encrypt(String strToEncrypt) 
+
+	private static SecretKeySpec secretKey;
+
+	private static byte[] key;
+
+	public static String secretKeyStr = "qwertyuiopasdfghjkl";
+
+	public static void setKey()
 	{
-	    try
-	    {
-	        byte[] iv = { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 };
-	        IvParameterSpec ivspec = new IvParameterSpec(iv);
-	         
-	        SecretKeyFactory factory = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA256");
-	        KeySpec spec = new PBEKeySpec(secretKey.toCharArray(), salt.getBytes(), 65536, 256);
-	        SecretKey tmp = factory.generateSecret(spec);
-	        SecretKeySpec secretKey = new SecretKeySpec(tmp.getEncoded(), "AES");
-	         
-	        Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
-	        cipher.init(Cipher.ENCRYPT_MODE, secretKey, ivspec);
-	        return Base64.getEncoder().encodeToString(cipher.doFinal(strToEncrypt.getBytes("UTF-8")));
-	    }
-	    catch (Exception e) 
-	    {
-	        System.out.println("Error while encrypting: " + e.toString());
-	    }
-	    return null;
+		MessageDigest sha = null;
+		try {
+			key = secretKeyStr.getBytes("UTF-8");
+			sha = MessageDigest.getInstance("SHA-1");
+			key = sha.digest(key);
+			key = Arrays.copyOf(key, 16);
+			secretKey = new SecretKeySpec(key, "AES");
+		} catch (NoSuchAlgorithmException e) {
+			e.printStackTrace();
+		} catch (UnsupportedEncodingException e) {
+			e.printStackTrace();
+		}
 	}
-	
+
+	public static String encrypt(String strToEncrypt) {
+		try {
+			setKey();
+			Cipher cipher = Cipher.getInstance("AES/ECB/PKCS5Padding");
+			cipher.init(Cipher.ENCRYPT_MODE, secretKey);
+			String token = DatatypeConverter.printBase64Binary(cipher.doFinal(strToEncrypt.getBytes("UTF-8")));
+			return token.replace('+', '-').replace('/', '_').replace("%", "%25").replace("\n", "%0A");
+		} catch (Exception e) {
+			System.out.println("Error while encrypting: " + e.toString());
+		}
+		return null;
+	}
+
 	public static String decrypt(String strToDecrypt) {
-	    try
-	    {
-	        byte[] iv = { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 };
-	        IvParameterSpec ivspec = new IvParameterSpec(iv);
-	         
-	        SecretKeyFactory factory = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA256");
-	        KeySpec spec = new PBEKeySpec(secretKey.toCharArray(), salt.getBytes(), 65536, 256);
-	        SecretKey tmp = factory.generateSecret(spec);
-	        SecretKeySpec secretKey = new SecretKeySpec(tmp.getEncoded(), "AES");
-	         
-	        Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5PADDING");
-	        cipher.init(Cipher.DECRYPT_MODE, secretKey, ivspec);
-	        return new String(cipher.doFinal(Base64.getDecoder().decode(strToDecrypt)));
-	    } 
-	    catch (Exception e) {
-	        System.out.println("Error while decrypting: " + e.toString());
-	    }
-	    return null;
+		try {
+			String input = strToDecrypt.replace("%0A", "\n").replace("%25", "%").replace('_', '/').replace('-', '+');
+			setKey();
+			Cipher cipher = Cipher.getInstance("AES/ECB/PKCS5PADDING");
+			cipher.init(Cipher.DECRYPT_MODE, secretKey);
+			return new String(cipher.doFinal(DatatypeConverter.parseBase64Binary(input)));
+		} catch (Exception e) {
+
+			System.out.println("Error while decrypting: " + e.toString());
+		}
+		return null;
+
 	}
+
 }
